--- a/config
+++ b/config
@@ -12,6 +12,18 @@
         "Good"
       ]
     },
+    "state": {
+      "values": [
+        0,
+        1,
+        2,
+      ],
+      "names": [
+        "Bad",
+        "Normal",
+        "Good"
+      ]
+    },
     "time": 0
   },
   "home_location": {
